# Vehicle_Complaint_Intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: main.py
app/streamlit_app/: Home.py  charts.py  theme.py  utils.py
app/streamlit_app/pages/: 1_Single_Prediction.py  2_Compare_Backends.py  3_Batch_Prediction.py  4_Model_Metrics.py  5_Examples.py  6_About.py
docs/: API.md  Architecture.md  Deployment.md  Training.md  model_benchmark.md
notebooks/: nlp_final_(1)_(2)_(1) (1).ipynb
src/api/: routes.py  schemas.py
src/config/: settings.py
src/data/: cleaning.py  labels.py  loader.py  pipeline.py  schema.py  splits.py
src/evaluation/: error_analysis.py  metrics.py  multi_label_metrics.py
src/explainability/: coefficients.py  explain.py
src/features/: tfidf.py
src/inference/: predictor.py
src/models/: base.py  baseline.py  transformer.py  xgboost_model.py
src/monitoring/: prediction_log.py
src/preprocessing/: text_cleaning.py
src/services/: classification_service.py
src/training/: train.py  train_transformer.py
tests/api/: test_routes.py
tests/data_validation/: test_loader.py  test_schema.py  test_splits.py
tests/integration/: test_predictor_service.py
tests/unit/: test_baseline_models.py  test_cleaning.py  test_coefficients.py  test_error_analysis.py  test_labels.py  test_metrics.py  test_multi_label_metrics.py  test_text_cleaning.py  test_tfidf.py
