[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-complaint-classifier"
version = "0.1.0"
description = "NLP system for classifying NHTSA vehicle complaints into fault categories"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
